# balagan

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: demo.yaml  full.yaml  kill-demo.yaml  langgraph-demo.yaml
data/: claims_demo.jsonl
nebius/: 1_deploy_endpoint.sh  2_run_job.sh  3_report.sh  RUNBOOK.md
results/full/: 2026-07-15-l40s.md  BENCH_TEMPLATE.md  results.jsonl  summary.md
results/sample_mock/: results.jsonl  summary.md
results/stability_check/: results.jsonl  summary.md
src/balagan/: __init__.py  __main__.py  claims.py  cli.py  config.py  faults.py  llm.py  report.py  runner.py  scoring.py  store.py  topology.py
src/balagan/adapters/: __init__.py  langgraph_mesh.py
tests/: test_scoring.py  test_store_resume.py
